tests/snapshots/snapshots__command_palette_preserves_visual_selection_styled.snap
---
source: tests/snapshots.rs
expression: buffer_to_styled(&buf)
---
{fg=#1d8f1d bg=#041204 mod=bold} FILTERS{/}{fg=#33ff33 bg=#041204}                  {/}{bg=#041204} {/}{fg=#66ff66 bg=#041204}▶{/}{fg=#aaffaa bg=#041204}▮{/}{fg=#66ff66 bg=#041204}◀{/}{bg=#041204} {/}{fg=#33ff33 bg=#041204 mod=bold}/tmp/tuxedo-snapshot.txt{/}{fg=#1d8f1d bg=#041204}  •  15 tas{/}{fg=#1d8f1d bg=#041204 mod=bold} DETAIL{/}{fg=#33ff33 bg=#041204}                           {/}
{fg=#33ff33 bg=#041204}                          {/}{bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#66ff66 bg=#041204 mod=bold} PROJECTS{/}{fg=#33ff33 bg=#041204}                 {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(2){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#aaffaa bg=#020a02 mod=bold}PRIORITY A{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} priority  {/}{fg=#aaffaa bg=#041204 mod=bold}(A){/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +work           {/}{fg=#1d8f1d bg=#041204}  4{/}{fg=#33ff33 bg=#041204}    {/}{fg=#020a02 bg=#33ff33}  1 [x] {/}{fg=#020a02 bg=#33ff33 mod=bold}▸ (A) {/}{fg=#020a02 bg=#33ff33}Finish Q2 board deck +work{/}{fg=#1d8f1d bg=#041204} created   {/}{fg=#33ff33 bg=#041204}2026-05-01             {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +health         {/}{fg=#1d8f1d bg=#041204}  3{/}{fg=#33ff33 bg=#041204}    {/}{fg=#1d8f1d bg=#0c4f0c}  2 {/}{fg=#66ff66 bg=#0c4f0c}[x]   {/}{fg=#aaffaa bg=#0c4f0c mod=bold}(A) {/}{fg=#33ff33 bg=#0c4f0c}Call dentist to reschedule{/}{fg=#1d8f1d bg=#041204} due       {/}{fg=#33ff33 bg=#041204}2026-05-06  {/}{fg=#ccffcc bg=#041204}today{/}{fg=#33ff33 bg=#041204}      {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +finance        {/}{fg=#1d8f1d bg=#041204}  2{/}{fg=#33ff33 bg=#041204}    {/}{fg=#33ff33 bg=#020a02} {/}{fg=#1d8f1d bg=#020a02}(3){/}{fg=#33ff33 bg=#020a02}  {/}{fg=#77ff77 bg=#020a02 mod=bold}PRIORITY B{/}{fg=#33ff33 bg=#020a02}  {/}{fg=#0f3f0f bg=#020a02}──────────────────────{/}{fg=#1d8f1d bg=#041204} projects  {/}{fg=#66ff66 bg=#041204}+work{/}{fg=#33ff33 bg=#041204}                  {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +home           {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}┌ {/}{fg=#66ff66 bg=#041204 mod=bold}tuxedo{/}{fg=#1d8f1d bg=#041204} · command {/}{fg=#0f3f0f bg=#041204}────────────────────────────────────────┐{/}{fg=#2adf2a bg=#041204}ptop{/}{fg=#33ff33 bg=#041204}                {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +learning       {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204 mod=bold}>{/}{fg=#33ff33 bg=#041204} █                                                      {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +personal       {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│──────────────────────────────────────────────────────────│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  +travel         {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#66ff66 bg=#33ff33 mod=bold} ▶ {/}{fg=#33ff33 bg=#33ff33 mod=bold}new task{/}{fg=#33ff33 bg=#33ff33}                                             {/}{fg=#1d8f1d bg=#33ff33}n{/}{fg=#33ff33 bg=#33ff33} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}edit current task (normal mode)                      {/}{fg=#1d8f1d bg=#041204}e{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#2adf2a bg=#041204 mod=bold} CONTEXTS{/}{fg=#33ff33 bg=#041204}           {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}edit current task (insert mode)                      {/}{fg=#1d8f1d bg=#041204}i{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@errands        {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}toggle complete                                      {/}{fg=#1d8f1d bg=#041204}x{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@home           {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}delete task                                         {/}{fg=#1d8f1d bg=#041204}dd{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@laptop         {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}cycle priority                                       {/}{fg=#1d8f1d bg=#041204}p{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204} {/}{fg=#66ff66 bg=#041204}  {/}{fg=#2adf2a bg=#041204}@phone          {/}{fg=#1d8f1d bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}add project to current task                          {/}{fg=#1d8f1d bg=#041204}+{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}add or remove context on current task                {/}{fg=#1d8f1d bg=#041204}c{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}copy line to clipboard                              {/}{fg=#1d8f1d bg=#041204}yy{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}copy body to clipboard                              {/}{fg=#1d8f1d bg=#041204}yb{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}open task note                                       {/}{fg=#1d8f1d bg=#041204}o{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}create or open task note                             {/}{fg=#1d8f1d bg=#041204}O{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}edit note in panel                                   {/}{fg=#1d8f1d bg=#041204}m{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}attach file to task                                  {/}{fg=#1d8f1d bg=#041204}t{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#041204 bg=#041204 mod=bold}   {/}{fg=#33ff33 bg=#041204}open task attachments                            {/}{fg=#1d8f1d bg=#041204}Enter{/}{fg=#33ff33 bg=#041204} {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}  {/}{fg=#1d8f1d bg=#041204 mod=bold}↑↓ / Ctrl-N/P{/}{fg=#1d8f1d bg=#041204} navigate · {/}{fg=#1d8f1d bg=#041204 mod=bold}Enter{/}{fg=#1d8f1d bg=#041204} run · {/}{fg=#1d8f1d bg=#041204 mod=bold}Esc{/}{fg=#1d8f1d bg=#041204} cancel{/}{fg=#33ff33 bg=#041204}         {/}{fg=#0f3f0f bg=#041204}│{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                    {/}{fg=#0f3f0f bg=#041204}└──────────────────────────────────────────────────────────┘{/}{fg=#33ff33 bg=#041204}                    {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#33ff33 bg=#041204}                          {/}{fg=#33ff33 bg=#020a02}                                        {/}{fg=#33ff33 bg=#041204}                                  {/}
{fg=#020a02 bg=#33ff33 mod=bold} COMMAND {/}{bg=#041204}  {/}{fg=#33ff33 bg=#041204}type to filter · Enter run · E{/}{fg=#1d8f1d bg=#041204}15 open · 2 selected · 2026-05-06 · tuxedo 2026.7.1-prumo2 {/}
