tests/snapshots/snapshots__command_palette_preserves_visual_selection_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot.txt  •  15 tas DETAIL                           
                                                                                                    
 PROJECTS                  (2)  PRIORITY A  ────────────────────── priority  (A)                    
   +work             4      1 [x] ▸ (A) Finish Q2 board deck +work created   2026-05-01             
   +health           3      2 [x]   (A) Call dentist to reschedule due       2026-05-06  today      
   +finance          2     (3)  PRIORITY B  ────────────────────── projects  +work                  
   +home            ┌ tuxedo · command ────────────────────────────────────────┐ptop                
   +learning        │ > █                                                      │                    
   +personal        │──────────────────────────────────────────────────────────│                    
   +travel          │ ▶ new task                                             n │                    
                    │   edit current task (normal mode)                      e │                    
 CONTEXTS           │   edit current task (insert mode)                      i │                    
   @errands         │   toggle complete                                      x │                    
   @home            │   delete task                                         dd │                    
   @laptop          │   cycle priority                                       p │                    
   @phone           │   add project to current task                          + │                    
                    │   add or remove context on current task                c │                    
                    │   copy line to clipboard                              yy │                    
                    │   copy body to clipboard                              yb │                    
                    │   open task note                                       o │                    
                    │   create or open task note                             O │                    
                    │   edit note in panel                                   m │                    
                    │   attach file to task                                  t │                    
                    │   open task attachments                            Enter │                    
                    │  ↑↓ / Ctrl-N/P navigate · Enter run · Esc cancel         │                    
                    └──────────────────────────────────────────────────────────┘                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 COMMAND   type to filter · Enter run · E15 open · 2 selected · 2026-05-06 · tuxedo 2026.7.1-prumo2
