tests/snapshots/snapshots__detail_note_and_attachments_text.snap
---
source: tests/snapshots.rs
expression: buffer_to_text(&buf)
---
 FILTERS                   ▶▮◀ /tmp/tuxedo-snapshot-detail/todo.tx DETAIL                           
                                                                                                    
 PROJECTS                  (1)  NO PRIORITY  ───────────────────── priority                         
   +client           1      1 ▸     Prepare client call +client no created   —                      
                                                                   projects  +client                
 CONTEXTS                                                          contexts                         
   tag with @context                                                                                
                                                                   NOTE                             
                                                                   ░░░░░░░░░░░░░░░░░░░░ 0/1         
                                                                   # Briefing                       
                                                                                                    
                                                                   Context for the client call.     
                                                                                                    
                                                                   - [ ] send agenda                
                                                                   > keep it short                  
                                                                                                    
                                                                   FILES                            
                                                                   spec.pdf                         
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
 NORMAL   j/k · n new · r reschedule · x done · / searc1 open · 2026-05-06 · tuxedo 2026.7.1-prumo2
